# bashplot

./: .codecov.yml  .coverage  .dccache  .gitignore  .gitpod.yml  .travi.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  TODO.md  azure-pipelines.yml  coverage.xml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_data_cos.txt  test_data_random_gaussian.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  pypi_publish.yml  python-package.yml  release-drafter.yml
bashplot/: __init__.py  bashplot.py
test/: .coverage  sample_generator.py  test_bashplot.py  test_data_gaussian.txt  test_data_mixed.txt  test_data_sin.txt  test_sample_data.py
